<resources>
    <string name="app_name">Xevo</string>
    <string name="xevo">xevo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_quick_hit">Quick Hit</string>
    <string name="title_activity_professional_opinion">Heavy Lift</string>
    <string name="title_activity_talk_about_it">Deep Dive</string>
    <string name="whats_up">What\'s Up?</string>
    <string name="short_description">Short Description (optional)</string>
    <string name="attach_photo">Attach Photo</string>
    <string name="title_activity_login">Sign in</string>
    <string name="submit">Submit</string>
    <string name="what_makes_question_difficult">What makes this question difficult?</string>
    <string name="answer_ready">Your recommendation is ready!</string>
    <string name="question_submitted">Your question has been submitted!</string>
    <string name="title_activity_display_answer">Display Answer</string>
    <string name="download_pdf"><u>Download PDF</u></string>
    <string name="expertise">Expertise</string>
    <string name="expertise_name">Expertise name</string>
    <string name="motivation">Motivation</string>
    <string name="upload_resume">Upload Resume</string>
    <string name="upload_additional_document">Upload an Additional Document</string>
    <string name="terms_conditions">I agree to the terms and conditions</string>
    <string name="authenticity">Authenticity agreement</string>

    <!-- Admin side related strings -->
    <string name="delete_all_string">Delete All</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_choose_question">ChooseQuestion</string>
    <string name="register">Sign up with Email</string>
    <string name="error_invalid_credentials">Invalid credentials. Login failed</string>
    <string name="error_user_already_exists">A user with this email address already exists</string>

    <!-- Facebook login -->
    <string name="facebook_app_id">387972564985103</string>
    <string name="fb_login_protocol_scheme">fb387972564985103</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="optional">(optional)</string>
    <string name="relevantInfo">Relevant Info</string>
    <string name="whatMakesThisDifficult">What Makes This Difficult</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_ask_a_question">Ask a Question</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>

    <!-- Strings for experimental login -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="login_title">Login</string>
    <string name="create_act">Create Account</string>

    <!--Navigation Related Strings-->
    <string name="nav_case_list">My Cases</string>
    <string name="nav_become_consultant">Become a Consultant</string>
    <string name="nav_pending_consultant">Application Pending</string>
    <string name="nav_answer_case">Answer a Case</string>
    <string name="nav_admin_applications">Pending Applications</string>
    <string name="nav_question">Ask a Question</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_categories">Categories</string>

    <string name="question_fragment">Question</string>
    <string name="quick_hit">Quick Hit</string>
    <string name="quick_hit_price">$2</string>
    <string name="lets_talk_aboutit">Deep Dive</string>
    <string name="lets_talk_aboutit_price">$5</string>
    <string name="professional_opinion">Heavy Lift</string>
    <string name="professional_opinion_price">$10</string>

    <string name="title_activity_register">Register</string>
    <string name="title_activity_consultant_questions">ConsultantQuestions</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>

    <string name="prompt_answer">Enter Answer</string>

    <!-- Rejection flow strings -->
    <string name="rate_case">How would you rate this answer?</string>
    <string name="rate">Rate</string>
    <string name="rejection">Rejection</string>
    <string name="rate_exit_warning">Please help us improve by rating this answer. If you wish to leave anyway, we will assume you were completely satisfied. You can still come back and rate at any time.</string>
    <string name="rejection_form_title">Reject answer</string>
    <string name="explain_rejection">What makes this answer unsatisfactory?</string>
    <string name="rejection_what_happens_next">Your case will be put up for review. We will get back to you soon with either a new answer or an explanation of why this answer is alright!</string>
    <string name="rejection_explanation_title">The asker rejected this case because...</string>
    <string name="rejection_agree">I agree that this question can be improved and will rewrite a new answer to improve it</string>
    <string name="rejection_disagree">I think this answer was good and that the rejection was unjustified</string>
    <string name="rejection_comment_hint">Enter any further comments here</string>
    <string name="apology">We are sorry that you are dissatisfied with your answer</string>
    <string name="thank_you_for_rating">Thanks you for rating this case</string>
    <string name="rejection_reason">This answer rejected because...</string>

    <!-- Database strings -->
    <string name="db_users">Users/</string>
    <string name="db_cases">Cases/</string>
    <string name="db_cases_by_users">CasesByUsers/</string>
    <string name="db_cases_by_subject">CasesBySubject/</string>
    <string name="db_questions">Questions/</string>
    <string name="db_answers">Answers/</string>
    <string name="db_subjects">Subjects</string>
    <string name="db_pending_app">PendingApplications/</string>

    <string name="select_subject">Select Subject</string>
    <string name="default_notification_channel_id">XevoChannel</string>
    <string name="fcm">firebaseCloudMessenger</string>

    <!--Category Strings-->
    <string name="format_unanswered">%d unanswered</string>
    <string name="category_all_color">ffffcc80</string>
    <string name="title_activity_demo">demo</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_register_consultant">RegisterConsultant</string>

</resources>
