<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="xevo.xevo1.Rejection.EvaluateRejection">

    <TextView
        android:id="@+id/rejection_explanation_title"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/activity_margin_content"
        android:layout_marginTop="@dimen/activity_margin_content"
        style="@style/mediumTitleStyle"
        android:text="@string/rejection_explanation_title"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/rejection_explanation_content"
        android:layout_marginHorizontal="@dimen/activity_margin_content"
        style="@style/normalTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rejection_explanation_title"/>
    <RadioGroup
        android:id="@+id/agree_with_rejection_group"
        android:layout_marginHorizontal="@dimen/activity_margin_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rejection_explanation_content">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rejection_agree"
            android:id="@+id/rejection_agree"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rejection_disagree"
            android:id="@+id/rejection_disagree"/>
    </RadioGroup>

    <android.support.v7.widget.AppCompatEditText
        android:hint="@string/rejection_comment_hint"
        android:layout_marginHorizontal="@dimen/activity_margin_content"
        android:id="@+id/rejection_review_comments"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start"
        android:layout_above="@+id/submit_button"
        android:layout_below="@+id/agree_with_rejection"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/submit_button"
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/buttonStyle"/>
</android.widget.RelativeLayout>
