<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_case_list" />
        <item
            android:id="@+id/nav_question"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/nav_question" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_settings" />
    </group>
    <group
        android:checkableBehavior="single"
        android:id="@+id/is_consultant"
        android:visible="false">
        <item
            android:id="@+id/answer_question"
            android:icon="@drawable/common_full_open_on_phone"
            android:title="@string/nav_case_list" />
    </group>
    <group
        android:checkableBehavior="single"
        android:id="@+id/is_not_consultant"
        android:visible="false" >
        <item
            android:id="@+id/register_as_consultant"
            android:icon="@drawable/businessman_48"
            android:title="@string/nav_case_list" />
    </group>


</menu>
