<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBeige"
    tools:context="xevo.xevo1.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_margin="@dimen/activity_margin_content"
        android:visibility="gone" />

    <!--<ScrollView-->
        <!--android:id="@+id/login_form"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/activity_margin_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/xevo_logo_image_view"
                android:adjustViewBounds="true"
                android:layout_centerInParent="true"
                android:layout_height="0dp"
                android:layout_weight="4" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/xevo"
                android:layout_weight="2"
                style="@style/largeTitleStyle"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:fontFamily="@font/avenir_regular"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:fontFamily="@font/avenir_regular"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:background="@drawable/hollow_squircle_bg"
                android:textSize="@dimen/text_size_medium_small"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/avenir_regular" />

            <!--
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorLightBeige"
                android:fontFamily="@font/avenir_regular"
                android:textStyle="bold"-->

            <Button
                android:id="@+id/register_button"
                android:text="@string/register"
                style="@style/buttonStyle"
                android:textSize="@dimen/text_size_medium_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/hollow_squircle_bg"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/avenir_regular"
                />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:textSize="@dimen/text_size_medium_small"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 />

        </LinearLayout>

    <!--</ScrollView>-->
</LinearLayout>
