<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    tools:context="xevo.xevo1.ChooseQuestionFragment">

    <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
        android:background="@color/colorWhite"
    android:layout_height="match_parent">

        <android.support.constraint.Guideline
            android:id="@+id/guideline_horizontal_33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_horizontal_67"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_horizontal_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />


        <android.support.constraint.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <Button
            android:id="@+id/quick_hit_button"
            style="@style/chooseQuestionButtonStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/quick_hit"
            app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_33"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/quick_hit_button_price"
            style="@style/chooseQuestionButtonSubtitleStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/quick_hit_price"
            app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_33"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/talk_about_it_button"
            style="@style/chooseQuestionButtonStyle"
            android:background="#00FFFFFF"
            android:text="@string/lets_talk_aboutit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_33"
            app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_67"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/talk_about_it_button_price"
            style="@style/chooseQuestionButtonSubtitleStyle"
            android:background="#00FFFFFF"
            android:text="@string/lets_talk_aboutit_price"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_33"
            app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_67"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />



        <Button
            android:id="@+id/professional_opinion_button"
            style="@style/chooseQuestionButtonStyle"
            android:text="@string/professional_opinion"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/talk_about_it_button"
            app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal_end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/professional_opinion_button_price"
            style="@style/chooseQuestionButtonSubtitleStyle"
            android:text="@string/professional_opinion_price"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/talk_about_it_button"
            app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal_end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!--divider lines -->
        <View
            android:layout_width="0dp"
            android:layout_height="1dip"
            android:background="@color/colorDarkGrey"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintTop_toTopOf="@id/guideline_horizontal_33"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dip"
            android:background="@color/colorDarkGrey"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintTop_toTopOf="@id/guideline_horizontal_67"/>

    </android.support.constraint.ConstraintLayout>

    </FrameLayout>
